# mesh-sandbox

./: .dockerignore  .gitallowed  .gitdisallowed  .gitignore  .tool-versions  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  hadolint.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  merge-develop.yml  pull-request.yml
scripts/: sonar_tests.py
scripts/hooks/: commit-msg.sh  pre-commit.sh
src/mesh_sandbox/: __init__.py  api.py  conftest.py  dependencies.py
src/mesh_sandbox/common/: __init__.py  constants.py  exceptions.py  fernet.py  handler_helpers.py  messaging.py  mex_headers.py  plugin_manager.py
src/mesh_sandbox/handlers/: admin.py  endpoint_lookup.py  handshake.py  inbox.py  lookup.py  mailbox_info.py  outbox.py  reset.py  tracking.py  workflow_search.py
src/mesh_sandbox/models/: mailbox.py  message.py  plugin.py  workflow.py
src/mesh_sandbox/routers/: admin.py  endpoint_lookup.py  handshake.py  inbox.py  inbox_count.py  lookup.py  mailbox_info.py  outbox.py  request_logging.py  simple.py  tracking.py  update.py  workflow_search.py
src/mesh_sandbox/store/: base.py  canned_store.py  file_store.py  memory_store.py  serialisation.py
src/mesh_sandbox/store/data/: chunks.jsonl  mailboxes.jsonl  messages.jsonl  workflows.jsonl
src/mesh_sandbox/store/data/mailboxes/X26ABC1/in/: SIMPLE_MESSAGE.json  UNDELIVERED_MESSAGE.json
src/mesh_sandbox/store/data/mailboxes/X26ABC1/in/UNDELIVERED_MESSAGE/: 1
src/mesh_sandbox/store/data/mailboxes/X26ABC2/in/: CHUNKED_MESSAGE_GZ.json
src/mesh_sandbox/store/data/mailboxes/X26ABC2/in/CHUNKED_MESSAGE_GZ/: 1  2
src/mesh_sandbox/test_plugin/: example_plugin.py  example_plugin.txt
src/mesh_sandbox/tests/: __init__.py  admin.py  docker_tests.py  exceptions.py  handshake.py  handshake_tests.py  helpers.py  inbox.py  java_client_tests.py  lookup.py  mailbox_info_tests.py  mesh_api_helpers.py  mesh_client.py  mesh_client_tests.py  messaging_tests.py  outbox.py  plugin_manager_tests.py  reset.py  send_receive_tests.py  serialisation.py
src/mesh_sandbox/views/: __init__.py  admin.py  error.py  inbox.py  lookup.py  outbox.py  tracking.py
